@@ -4,7 +4,7 @@
 
     <groupId>com.arangodb</groupId>
     <artifactId>jackson-dataformat-velocypack</artifactId>
-    <version>3.0.1</version>
+    <version>3.1.0</version>
     <inceptionYear>2017</inceptionYear>
     <packaging>jar</packaging>
 
@@ -26,6 +26,8 @@
         <!-- javadoc-->
         <javadoc.opts/>
         <kotlin.version>1.6.21</kotlin.version>
+        <surefire.argLine/>
+        <jackson.version>2.14.1</jackson.version>
     </properties>
 
     <developers>
@@ -59,6 +61,18 @@
             </activation>
             <properties>
                 <javadoc.opts>-Xdoclint:none</javadoc.opts>
+            </properties>
+        </profile>
+        <profile>
+            <id>open-modules</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <surefire.argLine>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                </surefire.argLine>
             </properties>
         </profile>
     </profiles>
@@ -120,6 +134,11 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        ${surefire.argLine}
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -210,7 +229,7 @@
         <dependency>
             <groupId>com.arangodb</groupId>
             <artifactId>velocypack</artifactId>
-            <version>2.5.4</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -285,6 +304,18 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.36</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.36</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -302,7 +333,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
-                <version>2.13.3</version>
+                <version>${jackson.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
